Amended .gitignore to account for changes in project structure

--- a/.gitignore
+++ b/.gitignore
@@ -115,3 +115,9 @@ ENV/
 PyCSS/.idea/
 input.pyc
 myparser.pyc
+.idea/encodings.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/pyCSS.iml
+.idea/vcs.xml
+.idea/workspace.xml
